--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: rgb(169, 207, 198) 60%);
+    background-color: rgb(169, 207, 198);
     background-repeat: no-repeat;
 
 }
